update project name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejsprj-webvs-gpio-20190402",
+  "name": "nodeprj-webvs-gpio",
   "version": "0.0.0",
   "private": true,
   "scripts": {
